--- a/index.html
+++ b/index.html
@@ -287,8 +287,7 @@
                             data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1500,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
                             data-textalign="['center','center','center','center']" data-paddingtop="[0,0,0,0]"
                             data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
-                            style="z-index: 17; white-space: nowrap;">Millions of Unbaised Reviews.Trusted by 700
-                            Million + users.
+                            style="z-index: 17; white-space: nowrap;">Only platform to review guests
                         </div>
                     </li>
 
@@ -330,8 +329,7 @@
                             data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":2000,"to":"o:1;","delay":1500,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
                             data-textalign="['center','center','center','center']" data-paddingtop="[0,0,0,0]"
                             data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]"
-                            style="z-index: 17; white-space: nowrap;">Millions of Unbaised Reviews.Trusted by 700
-                            Million + users.
+                            style="z-index: 17; white-space: nowrap;">Only platform to review guests
                         </div>
                     </li>
                 </ul>
@@ -1267,7 +1265,7 @@
                             <span class="over">Over</span>
                             <div class="content-counter">
                                 <div class="numb-count" data-to="1512999" data-speed="1000" data-waypoint-active="yes">
-                                    1,512,999</div>
+                                    1000</div>
                             </div>
                             <span class="download">Reviews</span>
                         </div>
