--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                 </button>
              
               </div>
-              <i class="fa fa-grin-alt fa-2x"></i>
+              <i class="far fa-grin-alt "></i>
         </div>
         
   
