--- a/index.html
+++ b/index.html
@@ -1270,7 +1270,7 @@
 
                     <div class="col-lg-3">
                         <div class="widget widget_contact">
-                            <h5 class="widget-title">Quick Contact</h5>
+                            <h5 class="widget-title"></h5>
                          
                         </div>
                     </div><!-- /.col-md-3 -->
