--- a/host-review-report.html
+++ b/host-review-report.html
@@ -203,17 +203,18 @@
                                             </li>
 
                                         </ul>
-                                    </li>
-                                    <li>
-                                        <a data-toggle="modal"><i class="fa fa-user-plus"></i> Sign Up</a>
-                                        <ul class="submenu">
-                                            <li><a href="#popup_register">Athithi</a>
-                                            </li>
-                                            <li><a href="#popup_register">Host</a>
-                                            </li>
-
-                                        </ul>
-                                    </li>
+                                        <li>
+                                            <a style="font-weight:600!important" ><i class="fa fa-user-plus"></i> Sign Up</a>
+                                            <ul class="submenu">
+                                                <li>
+                                                    <a  href="Atithi-signup.html">Atithi </a> 
+                                                </li>
+                                                <li>
+                                                    <a  href="host-signup.html">Host </a> 
+                                                </li>
+    
+                                            </ul>
+                                        </li>
                                     <!-- <input style="margin-left: 30px;" type="radio" id="Atithi" name="type" value="Atithi">
                                 <label for="Athithi">Athithi</label>
                                 <input style="margin-left: 20px;" type="radio" id="Host" name="type" value="Host">
