--- a/host-signup.html
+++ b/host-signup.html
@@ -50,7 +50,7 @@
 
          <!-- Header -->
          <header id="header" class="header clearfix">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="row">
                     <div class="col-lg-3">
                         <div id="logo" class="logo float-left">
@@ -192,10 +192,10 @@
                                         <a style="font-weight:600!important" ><i class="fa fa-user-plus"></i> Sign Up</a>
                                         <ul class="submenu">
                                             <li>
-                                                <a data-toggle="modal" href="#popup_register">Atithi </a> 
+                                                <a  href="Atithi-signup.html">Atithi </a> 
                                             </li>
                                             <li>
-                                                <a data-toggle="modal" href="#popup_register">Host </a> 
+                                                <a  href="host-signup.html">Host </a> 
                                             </li>
 
                                         </ul>
