--- a/host-signup-step1.html
+++ b/host-signup-step1.html
@@ -151,13 +151,13 @@
           <div class="container work_wrapper">
            <h5>What type of facility provider are you?</h5>
             <p id="id_work_days">
-                <label><input type="checkbox" name="work_days" value="1"><span>Hotel</span></label>
-                <label><input type="checkbox" name="work_days" value="2"><span>Backpackers</span></label>
-                <label><input type="checkbox" name="work_days" value="3"><span>Homestay</span></label>
-                <label><input type="checkbox" name="work_days" value="4"><span>Campsight</span></label>
-                <label><input type="checkbox" name="work_days" value="5"><span>Treehouse</span></label>
-                <label><input type="checkbox" name="work_days" value="6"><span>Igloos</span></label>
-                <label><input type="checkbox" name="work_days" value="7"><span>HouseBoats</span></label>
+                <label><input type="checkbox" name="work_days" value="1"><span>Hotel <i class="fas fa-building"></i></span></label>
+                <label><input type="checkbox" name="work_days" value="2"><span>Backpackers <i class="fas fa-suitcase"></i></span></label>
+                <label><input type="checkbox" name="work_days" value="3"><span>Homestay <i class="fas fa-home"></i></span></label>
+                <label><input type="checkbox" name="work_days" value="4"><span>Campsight <i class="fas fa-campground"></i></span></label>
+                <label><input type="checkbox" name="work_days" value="5"><span>Treehouse<i class="fas fa-suitcase-rolling"></i></span></label>
+                <label><input type="checkbox" name="work_days" value="6"><span>Igloos<i class="fas fa-igloo"></i></span></label>
+                <label><input type="checkbox" name="work_days" value="7"><span>HouseBoats<i class="fas fa-ship"></i></span></label>
               </p>
         
 
