--- a/Atithi.html
+++ b/Atithi.html
@@ -19,7 +19,7 @@
 
     <!-- Theme Style -->
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+   
 
     <!-- Responsive -->
     <link rel="stylesheet" type="text/css" href="stylesheets/responsive.css">
@@ -398,7 +398,7 @@
 
 
 
- <section class="section">
+ <section class="welcome section">
     <div class="container">
        <h6 class="subtitle">Benefits </h6>
         <h1 class="title">Joining Atithi Advisor</h1>
