--- a/Atithi.html
+++ b/Atithi.html
@@ -172,7 +172,7 @@
                         data-param10="" data-description="">
 
                         <!-- MAIN IMAGE -->
-                        <img src="images/slides/2.jpg" alt="Atithi Advisor" data-bgposition="center center" data-kenburns="off"
+                        <img src="images/slides/slide-2.jpg" alt="Atithi Advisor" data-bgposition="center center" data-kenburns="off"
                             data-duration="30000" data-ease="Linear.easeNone" data-scalestart="100" data-scaleend="120"
                             data-rotatestart="0" data-rotateend="0" data-offsetstart="0 0" data-offsetend="0 0"
                             data-bgparallax="10" class="rev-slidebg" data-no-retina="">
