--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                         data-param10="" data-description="">
 
                         <!-- MAIN IMAGE -->
-                        <img src="images/slides/4.jpg" alt="" data-bgposition="center center" data-kenburns="off"
+                        <img src="images/slides/slide-1.jpg" alt="" data-bgposition="center center" data-kenburns="off"
                             data-duration="30000" data-ease="Linear.easeNone" data-scalestart="100" data-scaleend="120"
                             data-rotatestart="0" data-rotateend="0" data-offsetstart="0 0" data-offsetend="0 0"
                             data-bgparallax="10" class="rev-slidebg" data-no-retina="">
@@ -220,7 +220,7 @@
                         data-param10="" data-description="">
 
                         <!-- MAIN IMAGE -->
-                        <img src="images/slides/2.jpg" alt="" data-bgposition="center center" data-kenburns="off"
+                        <img src="images/slides/1.jpg" alt="" data-bgposition="center center" data-kenburns="off"
                             data-duration="30000" data-ease="Linear.easeNone" data-scalestart="100" data-scaleend="120"
                             data-rotatestart="0" data-rotateend="0" data-offsetstart="0 0" data-offsetend="0 0"
                             data-bgparallax="10" class="rev-slidebg" data-no-retina="">
