--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                         data-param10="" data-description="">
 
                         <!-- MAIN IMAGE -->
-                        <img src="images/slides/slide-1.jpg" alt="" data-bgposition="center center" data-kenburns="off"
+                        <img src="images/slides/4.jpg" alt="" data-bgposition="center center" data-kenburns="off"
                             data-duration="30000" data-ease="Linear.easeNone" data-scalestart="100" data-scaleend="120"
                             data-rotatestart="0" data-rotateend="0" data-offsetstart="0 0" data-offsetend="0 0"
                             data-bgparallax="10" class="rev-slidebg" data-no-retina="">
@@ -220,7 +220,7 @@
                         data-param10="" data-description="">
 
                         <!-- MAIN IMAGE -->
-                        <img src="images/slides/1.jpg" alt="" data-bgposition="center center" data-kenburns="off"
+                        <img src="images/slides/2.jpg" alt="" data-bgposition="center center" data-kenburns="off"
                             data-duration="30000" data-ease="Linear.easeNone" data-scalestart="100" data-scaleend="120"
                             data-rotatestart="0" data-rotateend="0" data-offsetstart="0 0" data-offsetend="0 0"
                             data-bgparallax="10" class="rev-slidebg" data-no-retina="">
@@ -995,7 +995,7 @@
             <div class="swiper-slide">
 
                 <div class="testimonial-container">
-                    <img src="images/t2.jpg" loading="lazy" class="testimonial-person" alt="Shristi Resort">
+                    <img src="images/user-profile.png" loading="lazy" class="testimonial-person" alt="Shristi Resort">
 
                     <div class="testimonial-rating">
                         <img src="images/star.png" loading="lazy"  class="testimonial-star" alt="Shristi Resort">
@@ -1018,7 +1018,7 @@
             <div class="swiper-slide">
 
                 <div class="testimonial-container">
-                    <img src="images/t2.jpg" loading="lazy" class="testimonial-person" alt="Shristi Resort">
+                    <img src="images/user-profile.png" loading="lazy" class="testimonial-person" alt="Shristi Resort">
 
                     <div class="testimonial-rating">
                         <img src="images/star.png" loading="lazy"  class="testimonial-star" alt="Shristi Resort">
@@ -1038,7 +1038,7 @@
 
             <div class="swiper-slide">
                 <div class="testimonial-container">
-                    <img src="images/t4.jpg" loading="lazy" class="testimonial-person" alt="Shristi Resort">
+                    <img src="images/user-profile.png" loading="lazy" class="testimonial-person" alt="Shristi Resort">
 
                     <div class="testimonial-rating">
                         <img src="images/star.png" loading="lazy" class="testimonial-star" alt="Shristi Resort">
@@ -1058,26 +1058,7 @@
 
             <div class="swiper-slide">
                 <div class="testimonial-container">
-                    <img src="images/t3.jpg" loading="lazy" class="testimonial-person" alt="Shristi Resort">
-
-                    <div class="testimonial-rating">
-                        <img src="images/star.png" loading="lazy" class="testimonial-star" alt="Shristi Resort">
-                        <img src="images/star.png" loading="lazy" class="testimonial-star" alt="Shristi Resort">
-                        <img src="images/star.png" loading="lazy" class="testimonial-star" alt="Shristi Resort">
-                        <img src="images/star.png" loading="lazy" class="testimonial-star" alt="Shristi Resort">
-                        <img src="images/star.png" loading="lazy" class="testimonial-star" alt="Shristi Resort">
-                    </div>
-
-              
-                    <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-
-                    <h2 class="testimonial-name">Lorem ipsum</h2>
-                    <h6 class="testimonial-name">Hotel Carlton Mumbai.</h6>
-                </div>
-            </div>
-            <div class="swiper-slide">
-                <div class="testimonial-container">
-                    <img src="images/t3.jpg" loading="lazy" class="testimonial-person" alt="Shristi Resort">
+                    <img src="images/user-profile.png" loading="lazy" class="testimonial-person" alt="Shristi Resort">
 
                     <div class="testimonial-rating">
                         <img src="images/star.png" loading="lazy" class="testimonial-star" alt="Shristi Resort">
