--- a/atithi-signin.html
+++ b/atithi-signin.html
@@ -34,7 +34,13 @@
     <link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-
+<style>
+    /* .background{
+        background-image: url(images/login-background2.jpg) ;
+        background-repeat:no-repeat;
+        background-size: cover;
+    } */
+</style>
 </head>
 
 <body class="header_sticky">
@@ -148,7 +154,7 @@
     </header><!-- /.header -->
 
        <!-- *******************************  Form start   **************************************** -->
-
+<div class="background">
  <div class="form-container form-small-container">
       <div class="container">
 
@@ -182,7 +188,7 @@
     </div>       
  </div>
 
-
+</div>
 
 
 
