--- a/host-signup.html
+++ b/host-signup.html
@@ -266,7 +266,7 @@
                         <input type="text" name="parentCompanyName" class="form-control">
                     </div>
                     <div class="form-group col-lg-5 col-md-12">
-                    <label for="exampleInputEmail1">Trip Avdisor(link of the hotel) </label>
+                    <label for="exampleInputEmail1">Trip Advisor(link of the hotel) </label>
                     <input type="text"  class="form-control">
                 </div>
              
