--- a/host-landing.html
+++ b/host-landing.html
@@ -445,7 +445,7 @@
                                   </div>
                                   <div class="form-row row">
                                     <div class="form-group col-lg-5 col-md-12">
-                                        <label for="exampleInputEmail1">OTA Rating(paste link)</label>
+                                        <label for="exampleInputEmail1">OTA Rating(link to OTA)</label>
                                         <input type="text"  class="form-control">
                                     </div>
                                     <div class="form-group col-lg-6 col-md-12">
