--- a/atithi-landing.html
+++ b/atithi-landing.html
@@ -363,13 +363,8 @@
               <div class="form-row row">
                   <div class="form-group col-lg-5 col-md-12">
                       <label for="inputState">Enter Dream Destination</label>
-                      <select id="inputState" class="form-control">
-                        <option selected>Choose...</option>
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                      </select>
+                      <label for="exampleInputEmail1"><textarea name="bucketlist" id="" cols="30" rows="10" placeholder="Enter three places"></textarea></label>
+                      <input type="text"  class="form-control">
                   </div>
 
                   
