--- a/host-landing.html
+++ b/host-landing.html
@@ -619,7 +619,7 @@
                     <section class=" tab-section" id="c4" data-tab-content>    
                         <h4 style="text-align: center;font-family: 'Poppins', sans-serif;">Feedback Parameters</h4>
                         <br>
-                         <table class="table table-bordered rating-table">
+                         <table class="table table-bordered rating-table table-responsive">
                              <thead class="thead-dark">
                                  <tr>
                                    <th scope="col">Sr No.</th>
@@ -720,7 +720,7 @@
                                <input type="date" name="fname" required>
                            </div>
                            </div>
-                           <table class="table table-bordered rating-table" id="table">
+                           <table class="table table-bordered rating-table table-responsive" id="table">
                                 <thead class="thead-dark">
                                     <tr>
                                       <th scope="col" id="month">Month</th>
