--- a/atithi-landing.html
+++ b/atithi-landing.html
@@ -420,7 +420,7 @@
                       
                         <h4 style="text-align: center;font-family: 'Poppins', sans-serif;">Feedback Parameters</h4>
                         <br>
-                         <table class="table table-bordered rating-table">
+                         <table class="table table-bordered rating-table table-responsive">
                              <thead class="thead-dark">
                                  <tr>
                                    <th scope="col">Sr No.</th>
