--- a/Host.html
+++ b/Host.html
@@ -269,7 +269,7 @@
 <!----------------------2ND MENU-------------------------------->
 <!----------------------2ND MENU-------------------------------->
 
-
+<!-- 
 <section class="second-menu">
     <div class="container">
       <div class="row">
@@ -382,7 +382,7 @@
       </div>
     </div>
   </section>
-
+ -->
 
 
 
@@ -398,7 +398,7 @@
          <p class="description">The other side of the story. One of its kind platform where you can review your esteemed guest. Not just reviewing but you can make their stay more pleasant by knowing the background of the guest, his personal details, his past stay experience’s written by Host like you. Isnt it interesting?  Please join this mission to make Travel industry more interesting and more personalized for the guest and help many host like yours to serve our Atithi better. </p>
 
          <div class="button-container">
-             <a href="#" class="button ">Join now for free</a>
+             <a href="host-signup.html" class="button ">Join now for free</a>
              <a href="#" class="button">Click for Assistance</a>
          </div>
      </div>
