--- a/host-signup.html
+++ b/host-signup.html
@@ -276,7 +276,7 @@
                
 
                 <div class="button-container">
-                    <button type="submit" class="btn submit-btn" ><a href="host-signin.html">Submit</a></button>
+                    <button type="submit" class="submit-btn" ><a href="host-signin.html">Submit</a></button>
                 </div>
             </form>
           </div>
