--- a/whyatithi.html
+++ b/whyatithi.html
@@ -265,7 +265,7 @@
         </div> -->
 <!----------------------2ND MENU-------------------------------->
 
-
+<!-- 
 <section class="second-menu">
     <div class="container">
       <div class="row">
@@ -376,7 +376,7 @@
         
       </div>
     </div>
-  </section>
+  </section> -->
 
 
 
