--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US">
 <!--<![endif]-->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 <head>
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
@@ -269,7 +269,7 @@
         </div> -->
 <!----------------------2ND MENU-------------------------------->
 
-
+<!-- 
 <section class="second-menu">
     <div class="container">
       <div class="row">
@@ -381,7 +381,7 @@
      
       </div>
     </div>
-  </section>
+  </section> -->
 
 
 
